aerolase/force-app/main/default/objects/Account/fields/AVA_MAPPER__Business_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Business_Identification_Number__c</fullName>
    <inlineHelpText>Please enter your Business Identification / VAT Number. This will be used for reverse charge VAT calculations.</inlineHelpText>
    <label>Business Identification Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>