aerolase/force-app/main/default/objects/Account/fields/AVA_MAPPER__Exemption_Number__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Exemption_Number__c</fullName>
    <inlineHelpText>If you enter any data into this field their sales transactions will be exempt from sales tax.</inlineHelpText>
    <label>Exemption Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>