aerolase/force-app/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>Customer identifier determined by accounting team</description>
    <externalId>true</externalId>
    <inlineHelpText>ex. C-96377-977-0</inlineHelpText>
    <label>Customer Number</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>