aerolase/force-app/main/default/objects/Account/fields/Device_Returned__c.field-meta.xml
<CustomField>
    <fullName>Device_Returned__c</fullName>
    <description>If a customer has returned their device.</description>
    <label>Device Returned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>