aerolase/force-app/main/default/objects/Account/fields/Do_Not_Auto_Assign__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Auto_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Account Assignment Flow</description>
    <label>Do Not Auto Assign</label>
    <type>Checkbox</type>
</CustomField>