aerolase/force-app/main/default/objects/Account/fields/Ext_Warrant_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Ext_Warrant_Exp_Date__c</fullName>
    <label>Ext. Warrant Exp Date</label>
    <type>Date</type>
</CustomField>