aerolase/force-app/main/default/objects/Account/fields/Laser_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Laser_Serial_No__c</fullName>
    <label>Laser Serial No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>