aerolase/force-app/main/default/objects/Account/fields/Lasers_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lasers_Owner__c</fullName>
    <label>Lasers Owner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Neo</fullName>
            </value>
            <value>
                <fullName>2nd Neo</fullName>
            </value>
            <value>
                <fullName>3rd Neo</fullName>
            </value>
            <value>
                <fullName>4th Neo</fullName>
            </value>
            <value>
                <fullName>1st Era</fullName>
            </value>
            <value>
                <fullName>2nd Era</fullName>
            </value>
            <value>
                <fullName>1st V650</fullName>
            </value>
            <value>
                <fullName>2nd V650</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>