aerolase/force-app/main/default/objects/Account/fields/of_Won_Deals__c.field-meta.xml
<CustomField>
    <fullName>of_Won_Deals__c</fullName>
    <label># of Won Deals</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>contains</operation>
        <value>Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>