aerolase/force-app/main/default/objects/Account/fields/Orig_Warrant_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Orig_Warrant_Exp_Date__c</fullName>
    <label>Orig Warrant Exp Date</label>
    <type>Date</type>
</CustomField>