aerolase/force-app/main/default/objects/Account/fields/Orig_Warrant_Pulse_Count__c.field-meta.xml
<CustomField>
    <fullName>Orig_Warrant_Pulse_Count__c</fullName>
    <label>Orig Warrant Pulse Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>