aerolase/force-app/main/default/objects/Account/fields/Pipeline_Billing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Billing_Address_2__c</fullName>
    <label>Pipeline Billing Address 2</label>
    <type>TextArea</type>
</CustomField>