aerolase/force-app/main/default/objects/Account/fields/Pipeline_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Created_By__c</fullName>
    <label>Pipeline Created By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>