aerolase/force-app/main/default/objects/Account/fields/Pipeline_Next_Task_Due__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Next_Task_Due__c</fullName>
    <label>Pipeline Next Task Due</label>
    <type>Date</type>
</CustomField>