aerolase/force-app/main/default/objects/Account/fields/Pipeline_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Owner_Team__c</fullName>
    <label>Pipeline Owner Team</label>
    <length>120</length>
    <type>Text</type>
</CustomField>