aerolase/force-app/main/default/objects/Account/fields/Pipeline_Total_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Total_Pipeline__c</fullName>
    <label>Pipeline Total Pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>