aerolase/force-app/main/default/objects/Account/fields/Pipeline_Won_Deal__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Won_Deal__c</fullName>
    <label>Pipeline Won Deal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>