aerolase/force-app/main/default/objects/Account/fields/PrimaryAccountOwnerFilter__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAccountOwnerFilter__c</fullName>
    <formula>IF($User.Id = OwnerId, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPrimaryOwner</label>
    <type>Checkbox</type>
</CustomField>