aerolase/force-app/main/default/objects/Account/fields/SecondaryAccountOwnerFilter__c.field-meta.xml
<CustomField>
    <fullName>SecondaryAccountOwnerFilter__c</fullName>
    <formula>IF($User.Id = Secondary_Account_Owner__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSecondaryOwner</label>
    <type>Checkbox</type>
</CustomField>