aerolase/force-app/main/default/objects/Account/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>Facial Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>Family Practice</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Medical Center</fullName>
            </value>
            <value>
                <fullName>Medical Spa</fullName>
            </value>
            <value>
                <fullName>Naturopathic Doctor</fullName>
            </value>
            <value>
                <fullName>OB/GYN</fullName>
            </value>
            <value>
                <fullName>Oculoplastic Surgery</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>Podiatry</fullName>
            </value>
            <value>
                <fullName>Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Vein Center</fullName>
            </value>
            <value>
                <fullName>Cosmetic Surgeon &amp; Hair Restoration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>