aerolase/force-app/main/default/objects/Account/fields/Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Date__c</fullName>
    <label>Training Date</label>
    <type>DateTime</type>
</CustomField>