aerolase/force-app/main/default/objects/Account/listViews/Test_Accounts.listView-meta.xml
<ListView>
    <fullName>Test_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Do_Not_Auto_Assign__c</columns>
    <columns>Assignment_Status__c</columns>
    <columns>Territory__c</columns>
    <columns>Bump_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>startsWith</operation>
        <value>test</value>
    </filters>
    <label>Test Accounts</label>
    <sharedTo>
        <group>Admin_Group</group>
    </sharedTo>
</ListView>